Reverted unnecessary modification.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<table class="projectTable" width="100%">
 					<tr>
 						<!-- Projects -->
-						<td width="50%">
+						<td>
 							<div class="projectContainer">
 								<a class="projectLink" href="projects.html">
 									<img class="projectPreview" src="images/pid/2.jpg"/>
@@ -44,7 +44,7 @@
 						</td>
 						
 						<!-- Astrophotography -->
-						<td width="50%">
+						<td>
 							<div class="projectContainer">
 								<a class="projectLink" href="astrophotography.html">
 									<img class="projectPreview" src="images/pid/3.jpg"/>
@@ -56,7 +56,7 @@
 					
 					<tr>
 						<!-- About Me. -->
-						<td colspan="2" width="100%">
+						<td colspan="2">
 							<div class="projectContainer">
 								<a class="projectLink" href="about.html">
 									<img class="projectPreviewHalf" src="images/pid/0.jpg"/>
