--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 						<td colspan="2">
 							<div class="projectContainer">
 								<a class="projectLink" href="about.html">
-									<img class="projectPreviewHalf" src="images/pid/0.jpg"/>
+									<img class="projectPreviewHalf" src="images/meta.jpg"/>
 									<p class="projectTextWide">About</p>
 								</a>
 							</div>
