Added a placeholder image.

--- a/projects.html
+++ b/projects.html
@@ -36,7 +36,7 @@
 						<td>
 							<div class="projectContainer">
 								<a class="projectLink" href="projects/foip.html">
-									<img class="projectPreview" src="images/pid/0.jpg"/>
+									<img class="projectPreview" src="images/fixit.gif"/>
 									<p class="projectTextSmall">Foip</p>
 								</a>
 							</div>
@@ -46,7 +46,7 @@
 						<td>
 							<div class="projectContainer">
 								<a class="projectLink" href="projects/pslr.html">
-									<img class="projectPreview" src="images/pid/3.jpg"/>
+									<img class="projectPreview" src="images/fixit.gif"/>
 									<p class="projectTextSmall">Pentax Camera Controller</p>
 								</a>
 							</div>
@@ -81,7 +81,7 @@
 						<td>
 							<div class="projectContainer">
 								<a class="projectLink" href="projects/giantleap.html">
-									<img class="projectPreview" src="images/pid/5.jpg"/>
+									<img class="projectPreview" src="images/fixit.gif"/>
 									<p class="projectTextSmall">Giant Leap</p>
 								</a>
 							</div>
@@ -91,7 +91,7 @@
 						<td>
 							<div class="projectContainer">
 								<a class="projectLink" href="projects/holodeck.html">
-									<img class="projectPreview" src="images/pid/4.jpg"/>
+									<img class="projectPreview" src="images/fixit.gif"/>
 									<p class="projectTextSmall">Holodeck Interface</p>
 								</a>
 							</div>
