--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,7 @@
 							<div class="projectContainer">
 								<a class="projectLink" href="projects/foip.html">
 									<img class="projectPreview" src="images/fixit.gif"/>
-									<p class="projectTextSmall">Foip</p>
+									<p class="projectTextMedium">Foip</p>
 								</a>
 							</div>
 						</td>
@@ -47,7 +47,7 @@
 							<div class="projectContainer">
 								<a class="projectLink" href="projects/pslr.html">
 									<img class="projectPreview" src="images/fixit.gif"/>
-									<p class="projectTextSmall">Pentax Camera Controller</p>
+									<p class="projectTextMedium">Pentax Camera Controller</p>
 								</a>
 							</div>
 						</td>
@@ -57,7 +57,7 @@
 							<div class="projectContainer">
 								<a class="projectLink" href="projects/pathways.html">
 									<img id="pidImg" class="projectPreview" src="images/pid/0.jpg"/>
-									<p class="projectTextSmall">Pathways Into Darkness</p>
+									<p class="projectTextMedium">Pathways Into Darkness</p>
 								</a>
 							</div>
 						</td>
@@ -72,7 +72,7 @@
 							<div class="projectContainer">
 								<a class="projectLink" href="projects/blackmesa.html">
 									<img id="bmImg" class="projectPreview" src="images/bm/0.jpg"/>
-									<p class="projectTextSmall">Black Mesa</p>
+									<p class="projectTextMedium">Black Mesa</p>
 								</a>
 							</div>
 						</td>
@@ -82,7 +82,7 @@
 							<div class="projectContainer">
 								<a class="projectLink" href="projects/giantleap.html">
 									<img class="projectPreview" src="images/fixit.gif"/>
-									<p class="projectTextSmall">Giant Leap</p>
+									<p class="projectTextMedium">Giant Leap</p>
 								</a>
 							</div>
 						</td>
@@ -92,7 +92,7 @@
 							<div class="projectContainer">
 								<a class="projectLink" href="projects/holodeck.html">
 									<img class="projectPreview" src="images/fixit.gif"/>
-									<p class="projectTextSmall">Holodeck Interface</p>
+									<p class="projectTextMedium">Holodeck Interface</p>
 								</a>
 							</div>
 						</td>
