Added BM thumbs

--- a/projects.html
+++ b/projects.html
@@ -56,7 +56,7 @@
 						<td>
 							<div class="projectContainer">
 								<a class="projectLink" href="projects/pathways.html">
-									<img id="pidImg" class="projectPreview" src="images/pid/0.jpg"/>
+									<img id="pidImg" class="projectPreview" src="images/pid/0_thumb.jpg"/>
 									<p class="projectTextMedium">Pathways Into Darkness</p>
 								</a>
 							</div>
@@ -71,7 +71,7 @@
 						<td>
 							<div class="projectContainer">
 								<a class="projectLink" href="projects/blackmesa.html">
-									<img id="bmImg" class="projectPreview" src="images/bm/0.jpg"/>
+									<img id="bmImg" class="projectPreview" src="images/bm/0_thumb.jpg"/>
 									<p class="projectTextMedium">Black Mesa</p>
 								</a>
 							</div>
@@ -106,11 +106,11 @@
 			install_change_handler( 3000 );
 			
 			// Pathways into Darkness.
-			var projImgs = [ ["images/pid/0.jpg"], ["images/pid/1.jpg"], ["images/pid/2.jpg"], ["images/pid/3.jpg"], ["images/pid/4.jpg"], ["images/pid/5.jpg"], ["images/pid/6.jpg"] ];
+			var projImgs = [ ["images/pid/0_thumb.jpg"], ["images/pid/1_thumb.jpg"], ["images/pid/2_thumb.jpg"], ["images/pid/3_thumb.jpg"], ["images/pid/4_thumb.jpg"], ["images/pid/5_thumb.jpg"], ["images/pid/6_thumb.jpg"] ];
 			register_change_image( 'pidImg', projImgs );
 			
 			// Black Mesa.
-			var projImgs = [ ["images/bm/0.jpg"], ["images/bm/1.jpg"], ["images/bm/2.jpg"] ];
+			var projImgs = [ ["images/bm/0_thumb.jpg"], ["images/bm/1_thumb.jpg"], ["images/bm/2_thumb.jpg"] ];
 			register_change_image( 'bmImg', projImgs );
 		</script>
 		
