--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						<td width="33%">
 							<div class="projectContainer">
 								<a class="projectLink" href="projects.html">
-									<img id="projImg" class="projectPreview" src="images/pid/2_thumb.jpg"/>
+									<img id="projImg" class="projectPreview" src="images/pid/0_thumb.jpg"/>
 									<p class="projectTextMedium">Projects</p>
 								</a>
 							</div>
@@ -70,10 +70,10 @@
 			home_generate_motd();
 			install_change_handler( 2000 );
 			
-			var projImgs = [ ["images/pid/0_thumb.jpg"], ["images/pid/1_thumb.jpg"] ];
+			var projImgs = [ ["images/pid/0_thumb.jpg"], ["images/pid/2_thumb.jpg"], ["images/bm/0_thumb.jpg"], ["images/pid/2_thumb.jpg"] ];
 			register_change_image( 'projImg', projImgs );
 			
-			var astroImgs = [ ["images/astro/M_16_thumb.jpg"], ["images/astro/M_42_thumb.jpg"], ["images/astro/M_83_thumb.jpg"], ["images/astro/Moon_Half_thumb.jpg"], ["images/astro/Sol_12-10-13_thumb.jpg"] ];
+			var astroImgs = [ ["images/astro/M_42_thumb.jpg"], ["images/astro/M_16_thumb.jpg"], ["images/astro/M_83_thumb.jpg"], ["images/astro/Moon_Half_thumb.jpg"], ["images/astro/Sol_12-10-13_thumb.jpg"] ];
 			register_change_image( 'astroImg', astroImgs );
 		</script>
 		
