Beginnings of pathways.html

--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
 			<div id="body">
 	
 				<p class="sectionTitle">PROJECTS</p>
-				<p class="sectionSubtitle">Over the years I have been involved in many personal and team based projects. A sample of these are shown below.</p>
+				<p class="sectionSubtitle">proof i had too much time during school</p>
 				<hr />
 				<br />
 				
