Pathways is complete.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<!-- Setup the body. -->
 			<div id="body">
 				<p class="sectionTitle">LUCAS ZADROZNY</p>
-				<p id="motd" class="sectionSubtitle">[home_generate_motd IS BROKEN]</p>
+				<p id="motd" class="sectionSubtitle">i write code</p>
 				<br />				
 				<br />
 				
