BMS, Giant Leap, PSLR.

--- a/astrophotography.html
+++ b/astrophotography.html
@@ -23,7 +23,7 @@
 			<div id="body">
 	
 				<p class="sectionTitle">ASTROPHOTOGRAPHY</p>
-				<p class="sectionSubtitle">all photos displayed here are super copyright</p>
+				<p class="sectionSubtitle">copyright is implicit</p>
 				<hr />
 				<br />
 				
