--- a/projects/pathways.html
+++ b/projects/pathways.html
@@ -86,7 +86,7 @@
 				<br />
 				<hr />
 				
-				<p class="sectionSubtitle">SCREENSHOTS</p>
+				<p class="sectionSubtitle">PICTURES</p>
 				<table class="projectTable" width="100%">
 					<!-- First row. -->
 					<tr>
