--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
 				<br />				
 				<br />
 				
+				<p class="sectionMiniTitle">UNDER CONSTRUCTION</p>
+				<p id="motd" class="sectionSubtitle">some sections may not be complete</p>
+				<br />				
+				<br />
+				
 				<table class="projectTable" width="100%">
 					<tr>
 						<!-- Projects -->
