--- a/projects/pslr.html
+++ b/projects/pslr.html
@@ -27,7 +27,7 @@
 				<hr />
 				
 				<p class="sectionSubtitle">OVERVIEW</p>
-				<p class="sectionBody">DroidSLR was a project I began in late 2013 with the purpose of increasing my astrophotography capability. The camera that I had purchased to take long exposures was limited (in software) to 30 seconds. For faint objects such as nebulae and galaxies this was a very large problem.</p>
+				<p class="sectionBody">DroidSLR was a project I began in late 2013 with the purpose of increasing my astrophotography capability. The camera that I had purchased to take long exposures was limited (in software) to 30 second exposures. For faint objects such as nebulae and galaxies this was a very large problem.</p>
 				<p class="sectionBody">After researching online I came across a library named <a href="http://pktriggercord.sourceforge.net/">pkTriggerCord</a> that allowed Windows and Linux based PCs to control a Pentax DSLR camera over a USB connection.</p>
 				<p class="sectionBody">After experimenting with pkTriggerCord, I found it suitable for my purpose and began the development of DroidSLR.</p>
 				<br />
