--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,7 @@
 					<!-- First row. -->
 					<tr>
 						<!-- Pathways Into Darkness -->
-						<td>
+						<td width="33%">
 							<div class="projectContainer">
 								<a class="projectLink" href="projects/pathways.html">
 									<img id="pidImg" class="projectPreview" src="images/pid/0_thumb.jpg"/>
@@ -43,17 +43,17 @@
 						</td>
 						
 						<!-- Foip -->
-						<td>
+						<td width="33%">
 							<div class="projectContainer">
 								<a class="projectLink" href="projects/foip.html">
-									<img class="projectPreview" src="images/fixit.gif"/>
+									<img class="projectPreview" src="images/placeholder.jpg"/>
 									<p class="projectTextMedium">Foip</p>
 								</a>
 							</div>
 						</td>
 						
 						<!-- PSLR -->
-						<td>
+						<td width="33%">
 							<div class="projectContainer">
 								<a class="projectLink" href="projects/pslr.html">
 									<img id="pslrImg" class="projectPreview" src="images/pslr/0_thumb.jpg"/>
@@ -79,7 +79,7 @@
 						<td>
 							<div class="projectContainer">
 								<a class="projectLink" href="projects/giantleap.html">
-									<img class="projectPreview" src="images/fixit.gif"/>
+									<img class="projectPreview" src="images/placeholder.jpg"/>
 									<p class="projectTextMedium">Giant Leap</p>
 								</a>
 							</div>
@@ -89,7 +89,7 @@
 						<td>
 							<div class="projectContainer">
 								<a class="projectLink" href="projects/holodeck.html">
-									<img class="projectPreview" src="images/fixit.gif"/>
+									<img class="projectPreview" src="images/placeholder.jpg"/>
 									<p class="projectTextMedium">Holodeck Interface</p>
 								</a>
 							</div>
