--- a/astrophotography.html
+++ b/astrophotography.html
@@ -145,7 +145,7 @@
 							<div class="projectContainer">
 								<a class="projectLink" href="images/astro/M_77.jpg">
 									<img class="projectPreview" src="images/astro/M_77_thumb.jpg"/>
-									<p class="projectTextSmall">Messier 77</p>
+									<p class="projectTextSmall">Cetus A</p>
 								</a>
 							</div>
 						</td>
