--- a/about.html
+++ b/about.html
@@ -70,7 +70,17 @@
 					<li class="sectionBody">Limited experience in: FORTRAN, LISP, Prolog.</li>
 				</ul>
 				<br />
-				
+				<hr />
+
+				<p class="sectionSubtitle">VIDEO</p>
+				<table class="projectTable" width="100%">
+					<!-- First row. -->
+					<tr>
+						<td>
+							<iframe align="middle" width="420" height="315" src="http://www.youtube.com/embed/ye9LgRmfZZw" frameborder="0" allowfullscreen></iframe>
+						</td>
+					</tr>
+				</table>
 				<br />
 			</div>
 		</div>
