--- a/about.html
+++ b/about.html
@@ -62,11 +62,11 @@
 				<p class="sectionBodyBold">Technology</p>
 				<ul>
 					<li class="sectionBody">Operating Systems: Windows 3.1 - Windows 7, Linux.</li>
-					<li class="sectionBody">Hardware: <a href="https://www.oculus.com/">Oculus Rift DK1</a>, <a href="https://www.spaceglasses.com/">Meta DK1</a>, <a href="http://www.microsoft.com/en-us/kinectforwindows/">Kinect</a>, <a href="https://www.leapmotion.com/">Leap Motion</a>.</li>
+					<li class="sectionBody">Hardware: <a href="https://www.oculus.com/">Oculus Rift DK1\DK2</a>, <a href="https://www.spaceglasses.com/">Meta DK1</a>, <a href="http://www.microsoft.com/en-us/kinectforwindows/">Kinect</a>, <a href="https://www.leapmotion.com/">Leap Motion</a>.</li>
 					<li class="sectionBody">Tools: Visual Studio 98 – Visual Studio 2013, Eclipse, gcc, Turbo C.</li>
 					<li class="sectionBody">Version Control: SVN, Mercurial, Git.</li>
 					<li class="sectionBody">Proficient in: C, C++.</li>
-					<li class="sectionBody">Competent in: C#, Java, Javascript.</li>
+					<li class="sectionBody">Competent in: C#, Java, Javascript, VB.</li>
 					<li class="sectionBody">Limited experience in: FORTRAN, LISP, Prolog.</li>
 				</ul>
 				<br />
