--- a/projects/pathways.html
+++ b/projects/pathways.html
@@ -169,6 +169,15 @@
 					<!-- Third row. -->
 					<tr>
 						<td>
+							<p class="sectionBodyBold" align="center">Early VR tests</p>
+							<iframe align="middle" width="420" height="315" src="https://www.youtube.com/embed/ET0QpL9toS8" frameborder="0" allowfullscreen></iframe>
+							<p></p>
+						</td>
+					</tr>
+					
+					<!-- Fourth row. -->
+					<tr>
+						<td>
 							<p class="sectionBodyBold" align="center">PiD v2 Gameplay</p>
 							<p class="sectionBody" align="center">This video shows a small snippet of the PiD gameplay on the level "Never Stop Firing".</p>
 							<iframe align="middle" width="420" height="315" src="http://www.youtube.com/embed/6V8NgZ1_rtI" frameborder="0" allowfullscreen></iframe>
@@ -176,7 +185,7 @@
 						</td>
 					</tr>
 					
-					<!-- Fourth row. -->
+					<!-- Fifth row. -->
 					<tr>
 						<td>
 							<p class="sectionBodyBold" align="center">A1 Demo Gameplay</p>
