--- a/projects.html
+++ b/projects.html
@@ -79,7 +79,7 @@
 						<td>
 							<div class="projectContainer">
 								<a class="projectLink" href="projects/giantleap.html">
-									<img class="projectPreview" src="images/placeholder.jpg"/>
+									<img class="projectPreview" src="images/giantleap/0.jpg"/>
 									<p class="projectTextMedium">Giant Leap</p>
 								</a>
 							</div>
@@ -89,7 +89,7 @@
 						<td>
 							<div class="projectContainer">
 								<a class="projectLink" href="projects/holodeck.html">
-									<img class="projectPreview" src="images/placeholder.jpg"/>
+									<img id="holoImg" class="projectPreview" src="images/holodeck/0_thumb.jpg"/>
 									<p class="projectTextMedium">Holodeck Interface</p>
 								</a>
 							</div>
@@ -110,10 +110,6 @@
 			// Black Mesa.
 			var projImgs = [ ["images/bm/0_thumb.jpg"], ["images/bm/1_thumb.jpg"], ["images/bm/2_thumb.jpg"] ];
 			register_change_image( 'bmImg', projImgs );
-			
-			// PSLR.
-			var projImgs = [ ["images/pslr/0_thumb.jpg"] ];
-			register_change_image( 'pslrImg', projImgs );
 		</script>
 		
 	</body>
