--- a/astrophotography.html
+++ b/astrophotography.html
@@ -23,7 +23,7 @@
 			<div id="body">
 	
 				<p class="sectionTitle">ASTROPHOTOGRAPHY</p>
-				<p class="sectionSubtitle">copyright is implicit</p>
+				<p class="sectionSubtitle">A sample of my work, content protected by copyright.</p>
 				<hr />
 				<br />
 				
