--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
 					</tr>
 					
 					<tr>
-						<!-- Racing -->
+						<!-- Motorsport -->
 						<td width="33%">
 							<div class="projectContainer">
-								<a class="projectLink" href="racing.html">
-									<img id="projImg" class="projectPreview" src="images/placeholder.jpg"/>
-									<p class="projectTextMedium">Racing</p>
+								<a class="projectLink" href="motorsport.html">
+									<img id="motorsportImg" class="projectPreview" src="images/motorsport/1_thumb.jpg"/>
+									<p class="projectTextMedium">Motorsport</p>
 								</a>
 							</div>
 						</td>
@@ -100,6 +100,9 @@
 			
 			var photoImgs = [ ["images/photo/retro-race-fest-2016/7_thumb.jpg"], ["images/photo/v8-supercars-2015/1_thumb.jpg"], ["images/photo/mt-panorama/3_thumb.jpg"], ["images/photo/skidpan-2017-01/8_thumb.jpg"], ["images/photo/retro-race-fest-2016/2_thumb.jpg"] ];
 			register_change_image( 'photoImg', photoImgs );
+			
+			var motorsportImgs = [ ["images/motorsport/1_thumb.jpg"], ["images/motorsport/2_thumb.jpg"], ["images/motorsport/3_thumb.jpg"] ];
+			register_change_image( 'motorsportImg', motorsportImgs );
 		</script>
 		
 	</body>
