--- a/projects/pslr.html
+++ b/projects/pslr.html
@@ -56,7 +56,7 @@
 				<p class="sectionBodyBold">Challenges</p>
 				<ul>
 					<li class="sectionBody">Low Level Library - pkTriggerCord is a low level library. Functionality that should be simple (such as checking image buffers for a new image, retrieving images from a buffer, setting the current EV table, etc) require significant library calls. This became so much of an issue I created my own utility library for pkTriggerCord to make this "simple" functionality only a single function call away.</li>
-					<li class="sectionBody">Android Tools - Just kidding but no really.</li>
+					<li class="sectionBody">Android Tools - Just kidding but no really. (2017 update: it's not so bad anymore).</li>
 				</ul>
 				
 				<br />
